2019-07-09  Hristian Kirtchev  <kirtchev@adacore.com>

	* bindo-augmentors.adb (Visit_Elaboration_Root): Do not start a
	DFS from an elaboration root whose corresponding unit lacks
	elaboration code. This behavior mimics that of the old
	elaboration order mechanism.
	* bindo-graphs.adb (Find_All_Cycles_Through_Vertex): Move the
	vertex tracing within the functional branches of the routine.
	This prevents spurious trace output.
	(Has_No_Elaboration_Code): New routine.
	(Trace_Cycle, Trace_Edge): Update the various Ids to use the
	"standard" trace format.
	* bindo-graphs.ads (Has_No_Elaboration_Code): New routine.
	* bindo-units.ads, bindo-units.adb (Has_No_Elaboration_Code):
	New routine.

2019-07-09  Piotr Trojanek  <trojanek@adacore.com>

	* ali.ads, bindo-graphs.adb, bindo-validators.adb, clean.adb,
	doc/gnat_ugn/elaboration_order_handling_in_gnat.rst, einfo.ads,
	exp_aggr.adb, exp_ch13.adb, exp_ch4.adb, exp_ch5.adb,
	exp_ch6.adb, exp_ch7.adb, exp_ch9.adb, exp_pakd.adb,
	fname-uf.ads, gnatlink.adb, inline.adb, lib.ads, make.adb,
	namet.ads, opt.ads, par-ch4.adb, par-ch6.adb, par-labl.adb,
	prep.adb, sem_aggr.adb, sem_ch13.adb, sem_ch4.adb, sem_ch5.adb,
	sem_ch6.adb, sem_ch6.ads, sem_ch7.adb, sem_ch8.adb, sem_dim.adb,
	sem_disp.adb, sem_prag.adb, sem_res.adb, sem_warn.adb,
	sinfo.ads: Replace ".  " with ". ". Minor reformatting and typo
	corrections.
	* gnat_ugn.texi: Generate.

2019-07-09  Hristian Kirtchev  <kirtchev@adacore.com>

	* bindo.ads: Move type Precedence_Kind from the private to the
	visible part of the unit.
	* bindo-augmentors.adb: Remove the use of global data as it is
	bad practice.
	(Augment_Library_Graph): Update the parameter profile.
	(Is_Visited, Set_Is_Visited): Remove.
	(Visit_Elaboration_Root, Visit_Elaboration_Roots): Update the
	parameter profile and comment on usage.
	(Visit_Vertex): Likewise.  Also keep track of which invocation
	edge activates a task.
	* bindo-augmentors.ads (Augment_Library_Graph): Update the